--- a/sp/index.html
+++ b/sp/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=1200, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="pragma" content="no-cache"/>
 		<title>公式／エミュープラスHi 国産エミューオイル配合で腰・肩・ひざに直に届く！</title>
 		<meta name="keywords" content="エミューオイル,エミュークリーム,エミュープラスHi,msm,グルコサミン,野口医学研究所,コンドロイチン" />
@@ -57,8 +57,8 @@
 							<li class="row_clear">
 								<h3 class="title_h3 tal"><img src="image/title_h3_02.png" alt="ポイント1約４万年の歴史を持つ油で、豪州の先住民族が生んだ智恵"></h3>
 								<ul>
-									<li class="textNews">エミューオイルは、日本でいうアロエや馬油のようなもの。オーストラリアの先住民族が、肌のケアなどに利用し始めたのが起源とのこと。現在では米カリフォルニア大学や北海道農工大などで、科学的な研究が進められています。
-										<p><span>※</span> 角質層まで</p>
+									<li class="textNews tac">エミューオイルは、日本でいうアロエや馬油のようなもの。オーストラリアの先住民族が、肌のケアなどに利用し始めたのが起源とのこと。現在では米カリフォルニア大学や北海道農工大などで、科学的な研究が進められています。
+										<p class="note"><span>※</span> 角質層まで</p>
 									</li>
 									<li class="thumbImg"><img src="image/thumb_02.png" alt="先人たちが身体のケアに活用してきた歴史あるオイルの一種。"></li>
 								</ul>
@@ -67,8 +67,8 @@
 							<li class="row_clear">
 								<h3 class="title_h3 tal"><img src="image/title_h3_03.png" alt="ポイント2人の皮脂成分と似ているから、肌になじみやすくベタつきにくい"></h3>
 								<ul>
-									<li class="textNews">エミューの羽付近の皮下脂肪から主に抽出される油がエミューオイル。リノール酸やリノレン酸を多く含んだ天然オイルで、人間の皮脂と近い成分を持っています。親和性が高いため、肌に塗るとスーッと浸透<span class="capt">※</span>していくのも特長です。
-										<p><span>※</span> 角質層まで</p></li>
+									<li class="textNews tac">エミューの羽付近の皮下脂肪から主に抽出される油がエミューオイル。リノール酸やリノレン酸を多く含んだ天然オイルで、人間の皮脂と近い成分を持っています。親和性が高いため、肌に塗るとスーッと浸透<span class="capt">※</span>していくのも特長です。
+										<p class="note"><span>※</span> 角質層まで</p></li>
 									<li class="thumbImg"><img src="image/thumb_03.png" alt="塗ったそばから浸透※するから、使用後もベタつかない。"></li>
 								</ul>
 							</li>
@@ -77,7 +77,7 @@
 								<h3 class="title_h3 tal"><img src="image/title_h3_04.png" alt="ポイント3相性のよい成分を抱え込んで、奥まで※ツルルンと届ける"></h3>
 								<ul>
 									<li class="textNews">オイルという性質上、乳化剤やブースターとしても活用できるため、一緒に配合した成分を浸透<span class="capt">※</span>しやすくします。単独で使用するより、他の成分も混ぜて使うことこそ、エミューオイルの浸透<span class="capt">※</span>パワーを実感できるのです。
-										<p><span>※</span> 角質層まで</p></li>
+										<p class="note"><span>※</span> 角質層まで</p></li>
 									<li class="thumbImg"><img src="image/thumb_04.png" alt="エミューオイルのありなしで、使用感に大きな差が生まれます。"></li>
 								</ul>
 							</li>
@@ -143,17 +143,16 @@
 						<h3 class="title_h3"><img src="image/title_h3_06.png" alt="プロ選手の運動後のケアにはエミューオイルがいいですね。"></h3>
 						<li class="textAds">
 							<p>エミューオイルは人間の皮膚脂質と成分構成が非常によく似ているので、皮膚に吸収<span class="capt">※</span>されやすいという特長があります。これが、愛用者さんたちが口をそろえていう“浸透<span class="capt">※</span>のよさ”なんです。グルコサミンやMSMなども配合されていると、足腰を酷使するスポーツ選手のクールダウンやコンディション調整にはもってこいですね。(宮澤先生)
-								<span>※効果・効能には個人差があります。</span>
+								<p class="noteAds"><span class="inline">※</span>効果・効能には個人差があります。</p>
 							</p>
 						</li>
 					</ul>
-					<p class="noteAds"><span>※</span>効果・効能には個人差があります。</p>
 				</div>
 				<!-- /local_05 -->
 				<div class="arrow"><img src="image/arrow_down.png" alt=""></div>
 				<div class="local_06">
 					<h3 class="title_h3"><img src="image/title_07.png" alt="まだまだ知りたい！教えて！エミュープラスHi"></h3>
-					<img src="image/img_05.png" alt="">
+					<div class="img_main"><img src="image/img_05.png" alt=""></div>
 					<ul class="listItems">
 						<li class="items">
 							<h3 class="title_h3"><img src="image/title_h3_07.png" alt="いつ塗るのが効率的ですか？また、毎日塗っても大丈夫？"></h3>
@@ -199,44 +198,50 @@
 				<div class="local_08">
 					<h2 class="title_h2 first"><img src="image/title_08.png" alt="エミュープラスHiは5日間で73％が満足！※メーカー調べ。リニューアル前商品での使用感に関するアンケート結果。"></h2>
 					<h2 class="title_h2 second"><img src="image/title_09.png" alt="さぁ、あなたも「自分史上最高」のかるがる体験へ"></h2>
+					<h2 class="title_h2 three"><img src="image/title_10.png" alt="その秘密は…「スムーズ浸透構造」"></h2>
 					<div class="local_08_content">
-						<h2 class="title_h2"><img src="image/title_10.png" alt="その秘密は…「スムーズ浸透構造」"></h2>
 						<h3 class="title_B">エミューオイルが他の成分を<br>包み込んでスルンと浸透<span class="capt">※</span>させる</h3>
-						<p class="text w435">スムーズな実感を得られる秘密は、エミューオイルの特性にあります。分子量が大きくて肌に浸透<span class="capt">※</span>が難しいグルコサミンやコンドロイチンでも、エミューオイルが包み込むことで、スルリと奥まで浸透<span class="capt">※</span>。満足度は、エミューオイルの配合に左右されるといっても過言ではありません。
-							<span class="note">※角質層まで</span>
+						<p class="text">スムーズな実感を得られる秘密は、エミューオイルの特性にあります。分子量が大きくて肌に浸透<span class="capt">※</span>が難しいグルコサミンやコンドロイチンでも、エミューオイルが包み込むことで、スルリと奥まで浸透<span class="capt">※</span>。満足度は、エミューオイルの配合に左右されるといっても過言ではありません。
+							<span class="note"><span>※</span>角質層まで</span>
 						</p>
-						<img class="imgThumb" src="image/thumb_07.png" alt="グルコサミンコンドロイチンヒアルロン酸コラーゲンＭＳＭ">
-						<ul class="listItems pt-40">
-							<li>
-								<h4 class="title_h4">グルコサミン</h4>
-								<p>クッション的な役割を果たす軟骨の主要成分で、年齢とともに減少します。</p>
-							</li>
-							<li>
-								<h4 class="title_h4">コンドロイチン</h4>
-								<p>なめらかさに欠かせない成分。保水力があり、弾力を与える働きがあります。</p>
-							</li>
-							<li>
-								<h4 class="title_h4">MSM<span>(ジメチルスルホン)</span>
-								</h4>
-								<p>天然の有機イオウ物質。穏やかな毎日には欠かせない、やわらぎ成分です。</p>
-							</li>
-							<li>
-								<h4 class="title_h4">ヒアルロン酸</h4>
-								<p>ふしぶしの潤滑油的な役割を果たし、なめらかさとしなやかさをサポート。</p>
-							</li>
-							<li>
-								<h4 class="title_h4">コラーゲン</h4>
-								<p>軟骨の構成成分のひとつ。内側から支えるバネのような弾力を保ちます。</p>
-							</li>
-							<li>
-								<h4 class="title_h4">金箔</h4>
-								<p>クリーム表面に見える粒が金箔。美と健康をサポートし、サラッとした使用感に。</p>
-							</li>
-						</ul>
-						<h2 class="title_h2 title_bottom"><img src="image/title_11.png" alt="他にも、シャクヤク根、プラセンタ、ピクノジェノール、ヤシの油も配合"></h2>
-						<div class="ml--17">
-							<img src="image/thumb_08.png" alt="※全て保湿成分として">
+						<div class="imgThumb">
+							<img src="image/thumb_07.png" alt="グルコサミンコンドロイチンヒアルロン酸コラーゲンＭＳＭ">
 						</div>
+					</div>
+					<ul class="listItems">
+						<li>
+							<h4 class="title_h4">グルコサミン</h4>
+							<p>クッション的な役割を果たす軟骨の主要成分で、年齢とともに減少します。</p>
+						</li>
+						<li>
+							<h4 class="title_h4">コンドロイチン</h4>
+							<p>なめらかさに欠かせない成分。保水力があり、弾力を与える働きがあります。</p>
+						</li>
+					</ul>
+					<ul class="listItems">
+						<li>
+							<h4 class="title_h4">MSM<span>(ジメチルスルホン)</span>
+							</h4>
+							<p>天然の有機イオウ物質。穏やかな毎日には欠かせない、やわらぎ成分です。</p>
+						</li>
+						<li>
+							<h4 class="title_h4">ヒアルロン酸</h4>
+							<p>ふしぶしの潤滑油的な役割を果たし、なめらかさとしなやかさをサポート。</p>
+						</li>
+					</ul>
+					<ul class="listItems">
+						<li>
+							<h4 class="title_h4">コラーゲン</h4>
+							<p>軟骨の構成成分のひとつ。内側から支えるバネのような弾力を保ちます。</p>
+						</li>
+						<li>
+							<h4 class="title_h4">金箔</h4>
+							<p>クリーム表面に見える粒が金箔。美と健康をサポートし、サラッとした使用感に。</p>
+						</li>
+					</ul>
+					<h2 class="title_h2 title_bottom"><img src="image/title_11.png" alt="他にも、シャクヤク根、プラセンタ、ピクノジェノール、ヤシの油も配合"></h2>
+					<div class="tac">
+						<img src="image/thumb_08.png" alt="※全て保湿成分として">
 					</div>
 				</div>
 				<!-- /local_08 -->
@@ -245,8 +250,8 @@
 					<h2 class="title_h2 second"><img src="image/title_13.png" alt="野口医学研究所が開発"></h2>
 					<ul class="listItems">
 						<li class="items">
-							<div class="text w422">
-								<p class="tac pb-40 f_mt"><img src="image/logo_noguchi.png" alt=""></p>
+							<div class="text w383">
+								<p class="tac pb-25 f_mt"><img src="image/logo_noguchi.png" alt=""></p>
 								【野口医学研究所】は、世界的医学博士・野口英世の偉大な業績を称え、1985年に設立した研究機関。「歩く・立つ・座る」という日常の動きに困難を感じる人が増えている現代に、皆様の自立への第一歩につながる商品を開発しました
 							</div>
 						</li>
@@ -271,15 +276,15 @@
 					<h2 class="title_h2"><img src="image/title_15.png" alt="エミュープラスHiでできる簡単ふしぶしマッサージ"></h2>
 					<ul class="listItems">
 						<li class="items">
-							<div class="avatar arrowstep"><img src="image/step_01.png" alt="1"></div>
-							<div class="description">
+							<div class="avatar"><img src="image/step_01.png" alt="1"></div>
+							<div class="description arrowstep">
 								<h4 class="title_h4">手の平にクリームを<br>たっぷり取りましょう</h4>
 								<p class="text">若干多めに感じる程度が適量。気になる部分も含め、広めにケアすることで、ふしぶしの健康を日頃から維持できます。</p>
 							</div>
 						</li>
 						<li class="items">
-							<div class="avatar arrowstep"><img src="image/step_02.png" alt="2"></div>
-							<div class="description">
+							<div class="avatar"><img src="image/step_02.png" alt="2"></div>
+							<div class="description arrowstep">
 								<h4 class="title_h4">ひざ・肩・腰などに<br>塗り込んでマッサージ</h4>
 								<p class="text">クリームをしっかり揉み込むよう、３～５分ほどマッサージを。痛みを感じる場合は無理をせず、さするように塗り込んでください。</p>
 							</div>
@@ -301,31 +306,31 @@
 				<div class="local_12">
 					<h2 class="title_h2"><img src="image/title_16.png" alt="軽快スタスタご愛用者様が続々！"></h2>
 					<div class="news01">
-						<h2 class="title_h2"><img src="image/title_h3_09.png" alt="運動一日中でもボウリングできちゃう！"></h2>
+						<h2 class="title_h2"><img src="image/title_h3_10.png" alt="運動一日中でもボウリングできちゃう！"></h2>
 						<p class="text">夫婦ともボウリングが趣味で大会の前日には絶対塗るよ。お風呂上りに、軸となる左足のひざ周りを全部しっかりと。スーッと気持ちよくなって一日中快適！違和感もないし、ガクッてならないから好調が続くね。なんでこんなに良いのってくらい「エミュープラスHi」は大したクリームだよ。</p>
 						<div class="imgThumb"><img src="image/thumb_09.png" alt="清水 二郎さま(82歳)あい子さま(82歳)※効果・効能には個人差があります。"></div>
 					</div>
 					<ul class="listItems">
 						<li class="items">
-							<h3 class="title_h3"><img src="image/title_h3_10.png" alt="滑らか杖がなければ動けなかったのに…"></h3>
+							<h3 class="title_h3"><img src="image/title_h3_11.png" alt="滑らか杖がなければ動けなかったのに…"></h3>
 							<p class="text">将来のことを考えていろいろと探している中で、友人からこのクリームを紹介してもらいました。杖を持たなくても、なめらかに歩けるから、今では踊りができるまでになりました！</p>
 							<span class="note"><span>※</span>効果・効能には個人差があります。</span>
 							<span class="note2">高橋久子さま(50代)</span>
 						</li>
 						<li class="items">
-							<h3 class="title_h3"><img src="image/title_h3_11.png" alt="歩き塗り始めて１週間歩くことが楽しい！"></h3>
+							<h3 class="title_h3"><img src="image/title_h3_12.png" alt="歩き塗り始めて１週間歩くことが楽しい！"></h3>
 							<p class="text">足が辛かったのに、今は歩くことが楽しくて仕方ない！クリームを塗り始めてから、まだ１週間なのに。嘘の様にスムーズに歩けるので、もうひとつ購入したいと思っています。</p>
 							<span class="note"><span>※</span>効果・効能には個人差があります。</span>
 							<span class="note2">山下勘三さま(70代)</span>
 						</li>
-						<li class="items minH-307">
-							<h3 class="title_h3"><img src="image/title_h3_12.png" alt="ゴルフ歳のせいじゃなかったんですね！"></h3>
+						<li class="items">
+							<h3 class="title_h3"><img src="image/title_h3_13.png" alt="ゴルフ歳のせいじゃなかったんですね！"></h3>
 							<p class="text">肩のせいで趣味のゴルフも休んでいたのに、今は本当にスムーズ！シャツも楽に脱げるから、もう着替えにも時間がかかりません。動けるって素晴らしいです！</p>
 							<span class="note"><span>※</span>効果・効能には個人差があります。</span>
 							<span class="note2">池田則明さま(50代)</span>
 						</li>
 						<li class="items">
-							<h3 class="title_h3"><img src="image/title_h3_13.png" alt="実感今まではグルコサミンを飲んでいましたが…"></h3>
+							<h3 class="title_h3"><img src="image/title_h3_14.png" alt="実感今まではグルコサミンを飲んでいましたが…"></h3>
 							<p class="text">足首に違和感があって、ずっとグルコサミンにばかり頼っていました。でも満足できなくて…。このクリームも半信半疑でしたが、始めてからはずいぶん楽になりました。これからに期待です。</p>
 							<span class="note"><span>※</span>効果・効能には個人差があります。</span>
 							<span class="note2">山崎直子さま(60代)</span>
@@ -358,7 +363,7 @@
 			<footer class="footer">
 				<p class="ingredient">【配合成分】水、ジメチコン、エミュー油、シクロペンタシロキサン、ペンチレングリコール 他</p>
 				<img src="image/img_footer.png" alt="CELeBRITEFor Beauty & Health Care美しさと健康の為の商品を貴女に… セレブリテ。">
-				<p class="info"><span>(株)ゴールデンタイム</span> 〒144-0052 東京都大田区蒲田5-29-3-5F<br>お問い合わせ／TEL：03-5711-2102 平日AM9:30〜PM6:00受付</p>
+				<p class="info"><span>(株)ゴールデンタイム</span><br> 〒144-0052 東京都大田区蒲田5-29-3-5F<br>お問い合わせ／TEL：03-5711-2102<br> 平日AM9:30〜PM6:00受付</p>
 				<p class="copyright">Copyright ©celebrite All Rights Reserved</p>
 			</footer>
 			<!-- /footer -->
