--- a/sp/index.html
+++ b/sp/index.html
@@ -115,7 +115,7 @@
 							<li class="desFade"><img src="image/title_news_03.png" alt="ベトつかないから使いやすいです。朝塗ったら夕方まで軽やかな気分！山田 幸代さま　50代"></li>
 						</ul>
 						<ul class="listFade01">
-							<li class="desFade"><img src="image/title_news_04.png" alt="さわやかな香りだから人に会うときにも使えて便利！佐倉 智美さま　50代※効果・効能には個人差があります。※体験談は塗布とマッサージを併用した個人の感想。プライバシー保護のため、一部仮名を使用しています。"></li>
+							<li class="desFade w100"><img src="image/title_news_04.png" alt="さわやかな香りだから人に会うときにも使えて便利！佐倉 智美さま　50代※効果・効能には個人差があります。※体験談は塗布とマッサージを併用した個人の感想。プライバシー保護のため、一部仮名を使用しています。"></li>
 							<li class="itemsFade posAb fadeDown"><img src="image/fade_04.png" alt="腰背中"></li>
 						</ul>
 					</div>
@@ -129,7 +129,7 @@
 								<h3 class="title_h3 tal"><img src="image/title_h3_05.png" alt="試合後やハードな練習後に使えば、翌朝はバッチリです！"></h3>
 								<p>「体の不調は成績に直結するから、いろいろ試してきた中でも、このエミューオイル配合のクリームは本当にいい！使い心地が明らかに違いますね。塗ってマッサージをすると、スーッと楽になるんです。浸透性<span class="capt">※</span>の早さには驚きます。塗りこむそばから染み込んで、全然ベタつかない。試合前や練習前後は関節だけでなく、全身に塗り込みます。これで翌日も元気にプレーができます。」(芹澤プロ)</p>
 								<p class="noteAds"><span>※</span>効果・効能には個人差があります。</p>
-								<img src="image/thumb_05.png" alt="">
+								<img class="maxW60" src="image/thumb_05.png" alt="">
 							</li>
 							<li class="imgAds img_ads01">
 								<img src="image/man_01.png" alt="祝！201６年神奈川県シニアオープン優勝プロゴルファー 芹澤 大介(53歳)'89年プロ転向後、同年デュプロカップ和歌山オープン、'93年ゼンリン福岡オープンで優勝。身体に関する知識と繊細な感覚でゴルフ誌などでも活躍中。">
@@ -369,7 +369,6 @@
 			<!-- /footer -->
 			<div class="support area01" id="toTop">
 				<p class="order01-1 move"><a href="https://celebrite.jp/cart_index.html?request=insert&item_cd=25369_0048"><img src="image/contact_right.png" alt="なんと半額！定期コース便税込2,154円"></a></p>
-				<!--<a href=""><img src="image/contact_right.png" alt="なんと半額！定期コース便税込2,154円"></a>-->
 			</div>
 		</div>
 		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
