--- a/sp/index.html
+++ b/sp/index.html
@@ -32,7 +32,7 @@
 			<div class="page-main">
 				<div class="local_01">
 					<h2 class="title_h2"><img src="image/title_02.png" alt="TVで話題！「エミューオイル」配合のクリームを試すなら今がチャンス！"></h2>
-					<div class="img_main">
+					<div class="img_main flagScroll">
 						<img src="image/img_02.png" alt="塗って揉んで滑らか！軽快スタスタ！本商品の収益金は国際医学交流に使われています。ハイエミュープラスHi(80g)定期コース便定期初回限定特価税抜通常価格3,990円なんと半額！1,995円送料手数料無料(税込2,154円)初回一世帯様1個限り通常購入1個 3,990円(税込4,309円)+送料918円(税込)「定期コース便」は面倒なお手続き不要のコース(毎月自動お届け＆送料無料)です。じっくり続けて実感いただくため、初回お届け分はトクトク価格！2回目以降は3,720円(税込4,017円)+送料無料商品を3回以上お受取りいただくことがお約束となります。">
 						<div class="ctrbtn2"><a href="https://celebrite.jp/cart_index.html?request=insert&item_cd=2535_0048"><img src="image/button_02.png" alt="通常購入はこちら"></a></div>
 						<div class="ctrbtn area01">
@@ -57,7 +57,7 @@
 							<li class="row_clear">
 								<h3 class="title_h3 tal"><img src="image/title_h3_02.png" alt="ポイント1約４万年の歴史を持つ油で、豪州の先住民族が生んだ智恵"></h3>
 								<ul>
-									<li class="textNews tac">エミューオイルは、日本でいうアロエや馬油のようなもの。オーストラリアの先住民族が、肌のケアなどに利用し始めたのが起源とのこと。現在では米カリフォルニア大学や北海道農工大などで、科学的な研究が進められています。
+									<li class="textNews">エミューオイルは、日本でいうアロエや馬油のようなもの。オーストラリアの先住民族が、肌のケアなどに利用し始めたのが起源とのこと。現在では米カリフォルニア大学や北海道農工大などで、科学的な研究が進められています。
 										<p class="note"><span>※</span> 角質層まで</p>
 									</li>
 									<li class="thumbImg"><img src="image/thumb_02.png" alt="先人たちが身体のケアに活用してきた歴史あるオイルの一種。"></li>
@@ -67,7 +67,7 @@
 							<li class="row_clear">
 								<h3 class="title_h3 tal"><img src="image/title_h3_03.png" alt="ポイント2人の皮脂成分と似ているから、肌になじみやすくベタつきにくい"></h3>
 								<ul>
-									<li class="textNews tac">エミューの羽付近の皮下脂肪から主に抽出される油がエミューオイル。リノール酸やリノレン酸を多く含んだ天然オイルで、人間の皮脂と近い成分を持っています。親和性が高いため、肌に塗るとスーッと浸透<span class="capt">※</span>していくのも特長です。
+									<li class="textNews">エミューの羽付近の皮下脂肪から主に抽出される油がエミューオイル。リノール酸やリノレン酸を多く含んだ天然オイルで、人間の皮脂と近い成分を持っています。親和性が高いため、肌に塗るとスーッと浸透<span class="capt">※</span>していくのも特長です。
 										<p class="note"><span>※</span> 角質層まで</p></li>
 									<li class="thumbImg"><img src="image/thumb_03.png" alt="塗ったそばから浸透※するから、使用後もベタつかない。"></li>
 								</ul>
@@ -98,7 +98,7 @@
 					<span class="shiny"></span>
 					<a href=""><img src="image/button.png" alt="今すぐお得に申し込む！"></a>
 				</div>
-				<div class="arrow"><img src="image/arrow_down.png" alt=""></div>
+				<div class="arrow mt30 mb30"><img src="image/arrow_down.png" alt=""></div>
 				<div class="local_04">
 					<h2 class="title_h2"><img src="image/title_05.png" alt="続けてよかった！お客様のお声が続々！かるがる♪"></h2>
 					<div class="wrapList">
@@ -129,7 +129,7 @@
 								<h3 class="title_h3 tal"><img src="image/title_h3_05.png" alt="試合後やハードな練習後に使えば、翌朝はバッチリです！"></h3>
 								<p>「体の不調は成績に直結するから、いろいろ試してきた中でも、このエミューオイル配合のクリームは本当にいい！使い心地が明らかに違いますね。塗ってマッサージをすると、スーッと楽になるんです。浸透性<span class="capt">※</span>の早さには驚きます。塗りこむそばから染み込んで、全然ベタつかない。試合前や練習前後は関節だけでなく、全身に塗り込みます。これで翌日も元気にプレーができます。」(芹澤プロ)</p>
 								<p class="noteAds"><span>※</span>効果・効能には個人差があります。</p>
-								<img class="maxW60" src="image/thumb_05.png" alt="">
+								<img class="w50" src="image/thumb_05.png" alt="">
 							</li>
 							<li class="imgAds img_ads01">
 								<img src="image/man_01.png" alt="祝！201６年神奈川県シニアオープン優勝プロゴルファー 芹澤 大介(53歳)'89年プロ転向後、同年デュプロカップ和歌山オープン、'93年ゼンリン福岡オープンで優勝。身体に関する知識と繊細な感覚でゴルフ誌などでも活躍中。">
@@ -137,14 +137,14 @@
 						</ul>
 					</div>
 					<ul class="listAds02">
-						<li class="imgAds">
-							<img src="image/man_02.png" alt="専門家に聞くエミューオイルのパワーみやざわ整骨院院長宮澤大助東京都で「みやざわ整骨院」を開業。数多くのトップアスリートを治療し、コンディショントレーニングをサポート。代替医療分野で「東久邇宮記念賞」を受賞。">
-						</li>
 						<h3 class="title_h3"><img src="image/title_h3_06.png" alt="プロ選手の運動後のケアにはエミューオイルがいいですね。"></h3>
 						<li class="textAds">
 							<p>エミューオイルは人間の皮膚脂質と成分構成が非常によく似ているので、皮膚に吸収<span class="capt">※</span>されやすいという特長があります。これが、愛用者さんたちが口をそろえていう“浸透<span class="capt">※</span>のよさ”なんです。グルコサミンやMSMなども配合されていると、足腰を酷使するスポーツ選手のクールダウンやコンディション調整にはもってこいですね。(宮澤先生)
 								<p class="noteAds"><span class="inline">※</span>効果・効能には個人差があります。</p>
 							</p>
+						</li>
+						<li class="imgAds">
+							<img src="image/man_02.png" alt="専門家に聞くエミューオイルのパワーみやざわ整骨院院長宮澤大助東京都で「みやざわ整骨院」を開業。数多くのトップアスリートを治療し、コンディショントレーニングをサポート。代替医療分野で「東久邇宮記念賞」を受賞。">
 						</li>
 					</ul>
 				</div>
@@ -165,7 +165,7 @@
 							<h3 class="title_h3"><img src="image/title_h3_08.png" alt="塗った後、ベタベタしたりしない？"></h3>
 							<div class="contentItems">
 								<h3 class="title_B">どんどん浸透するので、<br>塗った後はサラサラです。</h3>
-								<p class="text w398">非常に伸びがよいクリームですので、少量でもしっかり浸透します。ベタつかないので、塗った後もすぐに衣服を身に付けでも大丈夫です。</p>
+								<p class="text">非常に伸びがよいクリームですので、少量でもしっかり浸透します。ベタつかないので、塗った後もすぐに衣服を身に付けでも大丈夫です。</p>
 								<div class="imgThumb"><img src="image/thumb_06.png" alt="マッサージすればさらに浸透！"></div>
 							</div>
 						</li>
@@ -250,8 +250,8 @@
 					<h2 class="title_h2 second"><img src="image/title_13.png" alt="野口医学研究所が開発"></h2>
 					<ul class="listItems">
 						<li class="items">
-							<div class="text w383">
-								<p class="tac pb-25 f_mt"><img src="image/logo_noguchi.png" alt=""></p>
+							<div class="text">
+								<p class="tac pb-25 f_mt logo_noguchi"><img src="image/logo_noguchi.png" alt=""></p>
 								【野口医学研究所】は、世界的医学博士・野口英世の偉大な業績を称え、1985年に設立した研究機関。「歩く・立つ・座る」という日常の動きに困難を感じる人が増えている現代に、皆様の自立への第一歩につながる商品を開発しました
 							</div>
 						</li>
@@ -336,7 +336,7 @@
 							<span class="note2">山崎直子さま(60代)</span>
 						</li>
 					</ul>
-					<p class="note"><span>※</span>体験談は塗布とマッサージを併用した個人の感想。プライバシー保護のため、一部仮名を使用しています。</p>
+					<p class="note"><span>※</span>体験談は塗布とマッサージを併用した個人の感想。<br>プライバシー保護のため、一部仮名を使用しています。</p>
 				</div>
 				<!-- /local_12 -->
 				<div class="local_13">
@@ -361,7 +361,7 @@
 				<!-- /local_13 -->
 			</div>
 			<footer class="footer">
-				<p class="ingredient">【配合成分】水、ジメチコン、エミュー油、シクロペンタシロキサン、ペンチレングリコール 他</p>
+				<p class="ingredient">【配合成分】<br>水、ジメチコン、エミュー油、シクロペンタシロキサン、ペンチレングリコール 他</p>
 				<img src="image/img_footer.png" alt="CELeBRITEFor Beauty & Health Care美しさと健康の為の商品を貴女に… セレブリテ。">
 				<p class="info"><span>(株)ゴールデンタイム</span><br> 〒144-0052 東京都大田区蒲田5-29-3-5F<br>お問い合わせ／TEL：03-5711-2102<br> 平日AM9:30〜PM6:00受付</p>
 				<p class="copyright">Copyright ©celebrite All Rights Reserved</p>
