--- a/sp/index.html
+++ b/sp/index.html
@@ -51,14 +51,14 @@
 							<li class="thumbImg"><img src="image/thumb_01.png" alt="※本商品には国産のエミューオイルを配合しています。"></li>
 						</ul>
 					</div>
+					<div class="local_02_img tac"><img src="image/img_03.png" alt=""></div>
 					<div class="wrapListNews">
-						<div class="local_02_img tac"><img src="image/img_03.png" alt=""></div>
 						<ul class="listNews">
 							<li class="row_clear">
 								<h3 class="title_h3 tal"><img src="image/title_h3_02.png" alt="ポイント1約４万年の歴史を持つ油で、豪州の先住民族が生んだ智恵"></h3>
 								<ul>
 									<li class="textNews">エミューオイルは、日本でいうアロエや馬油のようなもの。オーストラリアの先住民族が、肌のケアなどに利用し始めたのが起源とのこと。現在では米カリフォルニア大学や北海道農工大などで、科学的な研究が進められています。
-										<p class="note"><span>※</span> 角質層まで</p>
+										
 									</li>
 									<li class="thumbImg"><img src="image/thumb_02.png" alt="先人たちが身体のケアに活用してきた歴史あるオイルの一種。"></li>
 								</ul>
@@ -67,7 +67,7 @@
 							<li class="row_clear">
 								<h3 class="title_h3 tal"><img src="image/title_h3_03.png" alt="ポイント2人の皮脂成分と似ているから、肌になじみやすくベタつきにくい"></h3>
 								<ul>
-									<li class="textNews">エミューの羽付近の皮下脂肪から主に抽出される油がエミューオイル。リノール酸やリノレン酸を多く含んだ天然オイルで、人間の皮脂と近い成分を持っています。親和性が高いため、肌に塗るとスーッと浸透<span class="capt">※</span>していくのも特長です。
+									<li class="textNews">エミューの羽付近の皮下脂肪から主に抽出される油がエミューオイル。リノール酸やリノレン酸を多く含んだ天然オイルで、人間の皮脂と近い成分を持っています。親和性が高いため、肌に塗るとスーッと浸透<span class="capt">※</span>していくのも特長です。<br>米カリフォルニア大学でも研究されております。
 										<p class="note"><span>※</span> 角質層まで</p></li>
 									<li class="thumbImg"><img src="image/thumb_03.png" alt="塗ったそばから浸透※するから、使用後もベタつかない。"></li>
 								</ul>
@@ -85,6 +85,7 @@
 						</ul>
 					</div>
 				</div>
+				<img src="image/background_01_arrow.png" alt="">
 				<!-- /local_02 -->
 				<div class="local_03">
 					<h2 class="title_h2"><img src="image/title_04.png" alt="話題の「エミューオイル」をたっぷり配合！"></h2>
